fix: fix style right gap

--- a/src/ui/views/Dashboard/style.less
+++ b/src/ui/views/Dashboard/style.less
@@ -72,7 +72,6 @@
     .header-wrapper {
       background: rgba(255, 255, 255, 0.12);
       backdrop-filter: blur(40px);
-      min-width: 188px;
       padding: 6px 8px;
       border-radius: 6px;
       cursor: pointer;
